// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions connectionUpdate 1`] = `
Object {
  "type": "connection",
  "value": true,
}
`;

exports[`actions infoUpdate 1`] = `
Object {
  "acceptedPrices": Object {
    "custodian": Array [
      "acceptPrices",
    ],
  },
  "exchangePrices": Object {
    "source": Array [
      "exchangePrices",
    ],
  },
  "status": Array [
    "status1",
  ],
  "tokens": Array [
    "token1",
  ],
  "type": "info",
}
`;

exports[`actions orderBookSnapshotUpdate 1`] = `
Object {
  "type": "orderBookSnapshot",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderBookSubscriptionUpdate 1`] = `
Object {
  "pair": "pair",
  "type": "orderBookSubscription",
}
`;

exports[`actions orderBookUpdate 1`] = `
Object {
  "type": "orderBookUpdate",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderHistoryUpdate 1`] = `
Object {
  "type": "orderHistory",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;

exports[`actions orderSubscriptionUpdate 1`] = `
Object {
  "account": "account",
  "type": "orderBookSubscription",
}
`;

exports[`actions orderUpdate 1`] = `
Object {
  "type": "order",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribeOrderBook 1`] = `
Array [
  Object {
    "pair": "",
    "type": "orderBookSubscription",
  },
  Object {
    "pair": "pair",
    "type": "orderBookSubscription",
  },
]
`;

exports[`actions subscribeOrderBook 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;
